--- a/assets/projects.json
+++ b/assets/projects.json
@@ -230,7 +230,7 @@
     "Context": "Interaction Studio C2, Master in Communication Design, Politecnico di Milano"
   },
   {
-    "Folder": "_illumia",
+    "Folder": "illumia",
     "Cover": "contain",
     "Anno": "2023",
     "Nome": "Illumia",
